# goto_conversion

./: CITATION.cff  MANIFEST.in  README.md  pyproject.toml
goto_conversion/: __init__.py
goto_conversion/outputFiles/: gotoConversion.csv  mensProbabilitiesTable2025.csv  submission2025.csv
goto_conversion/probabilityMatrices/: womensProbabilitiesTable2025.csv
goto_conversion/probabilityTables/: mensWimbledon.csv  womensWimbledon.csv
probabilityMatrices/: mensProbabilitiesTable2024.csv  womensProbabilitiesTable2024.csv
