[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goto_conversion"
version = "2.1.2"
authors = [{ name = 'Kaito Goto' },]
description = "Produced 10+ Gold Medals and 100+ Medals on Kaggle"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gotoConversion/goto_conversion"
"Bug Tracker" = "https://github.com/gotoConversion/goto_conversion/issues"

[tool.setuptools]
packages = ["goto_conversion"]

[tool.setuptools.package-data]
"goto_conversion" = ["data/*.csv"]
