[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goto_conversion"
version = "2.1.4"
authors = [{ name = 'Kaito Goto' },]
description = "Powered over 10 Gold Medals and 100 Medals on Kaggle"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["kaggle", "betting", "bookmaker", "sports-analytics", "betfair-api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gotoConversion/goto_conversion"
"Bug Tracker" = "https://github.com/gotoConversion/goto_conversion/issues"

[tool.setuptools]
packages = ["goto_conversion"]

[tool.setuptools.package-data]
"goto_conversion" = ["data/*.csv"]
